cli/tests/testdata/test/steps/failing_steps.out
[WILDCARD]
running 3 tests from ./test/steps/failing_steps.ts
nested failure ...
  step 1 ...
    inner 1 ... FAILED ([WILDCARD])
      error: Error: Failed.
            throw new Error("Failed.");
                  ^
          at [WILDCARD]/failing_steps.ts:[WILDCARD]
          [WILDCARD]
    inner 2 ... ok ([WILDCARD])
  FAILED ([WILDCARD])
FAILED ([WILDCARD])
multiple test step failures ...
  step 1 ... FAILED ([WILDCARD])
    error: Error: Fail.
        throw new Error("Fail.");
              ^
        [WILDCARD]
  step 2 ... FAILED ([WILDCARD])
    error: Error: Fail.
      await t.step("step 2", () => Promise.reject(new Error("Fail.")));
                                                  ^
        at [WILDCARD]/failing_steps.ts:[WILDCARD]
        [WILDCARD]
FAILED ([WILDCARD])
failing step in failing test ...
  step 1 ... FAILED ([WILDCARD])
    error: Error: Fail.
        throw new Error("Fail.");
              ^
        at [WILDCARD]/failing_steps.ts:[WILDCARD]
        at [WILDCARD]
FAILED ([WILDCARD])

 ERRORS 

nested failure => ./test/steps/failing_steps.ts:[WILDCARD]
error: Error: 1 test step failed.
    at runTest (deno:runtime/js/40_testing.js:[WILDCARD])
    at async Object.runTests (deno:runtime/js/40_testing.js:[WILDCARD])

multiple test step failures => ./test/steps/failing_steps.ts:[WILDCARD]
error: Error: 2 test steps failed.
    at runTest (deno:runtime/js/40_testing.js:[WILDCARD])
    at async Object.runTests (deno:runtime/js/40_testing.js:[WILDCARD])

failing step in failing test => ./test/steps/failing_steps.ts:[WILDCARD]
error: Error: Fail test.
  throw new Error("Fail test.");
        ^
    at [WILDCARD]/failing_steps.ts:[WILDCARD]

 FAILURES 

nested failure => ./test/steps/failing_steps.ts:[WILDCARD]
multiple test step failures => ./test/steps/failing_steps.ts:[WILDCARD]
failing step in failing test => ./test/steps/failing_steps.ts:[WILDCARD]

FAILED | 0 passed (1 step) | 3 failed (5 steps) ([WILDCARD])

error: Test failed
